--- a/MainPages/index.html
+++ b/MainPages/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-
-    <div id="main">
+ <!-- ok -->
+    <div id="Main">
         <div id="header">
             <ul id="header-nav">
                 <li><a href="#">Home</a></li>
