--- a/MainPages/index.html
+++ b/MainPages/index.html
@@ -11,7 +11,7 @@
 
 <body>
  <!-- done -->
-    <div id="main">
+    <div id="Main">
         <div id="header">
             <ul id="header-nav">
                 <li><a href="#">Home</a></li>
