--- a/MainPages/index.html
+++ b/MainPages/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
- <!-- done -->
-    <div id="Main">
+    <div id="main">
         <div id="header">
             <ul id="header-nav">
                 <li><a href="#">Home</a></li>
